--- a/javascript/点击增删.html
+++ b/javascript/点击增删.html
@@ -5,71 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>点击增删</title>
+    <title>点击添加和减少</title>
+
     <style>
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            list-style: none;
         }
 
-        .main-wrap {
+        body {
             padding: 200px;
         }
 
-        a {
-            display: inline-block;
-            padding: 10px 20px;
-            text-decoration: none;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
         table {
-            margin-top: 10px;
+            resize:none;
             border: 1px solid #ccc;
-            border-collapse: collapse;
-            /*消除边框之间重复*/
         }
 
-        tr {
-            display: block;
-            padding: 5px 10px;
+        .insertbtn {
+            margin-bottom:10px;
+            padding: 10px 5px;
+            background: #ccc;
+            border: none;
+            border-radius:3px;
+            outline: none;
+        }
+        .insertbtn:active {
+            opacity: .8;
+        }
+
+        tr, td {
             border: 1px solid #ccc;
         }
 
         td {
-            padding: 0 10px;
+            padding: 5px 10px;
         }
+
     </style>
 </head>
 
-<body class="main-wrap">
-    <a class="insert-btn" href="javascript:;" onclick="add()">添加</a>
-    <a class="delete-btn" href="javascript:;" onclick="del()">删除</a>
+<body>
+    <button class="insertbtn" onclick="addtr()">添加</button>
 
-    <table id="one">
+    <table id="tab1">
         <tr>
-            <td>1</td>
+            <td>用户编号</td>
+            <td>用户姓名</td>
+            <td>操作</td>
         </tr>
         <tr>
-            <td>2</td>
+            <td>1</td>
+            <td>小明1</td>
+            <td><input type="button" value="删除" onclick="delecttr(this)"></td>
         </tr>
     </table>
 
     <script>
-        var insertBtn = document.getElementById("one");
-        tr.appendChild(td);
+        function addtr() {
+            var tab1 = document.getElementById("tab1");
+            var tr1 = document.createElement("tr");
 
-        function add() {
-            var tr = document.createElement("tr");
-            var td = document.createElement("td");
-            insertBtn.appendChild(tr);
+            for (var i = 0; i < 2; i++) {
+                var td1 = document.createElement("td");
+                td1.innerHTML = "1";
+                tr1.appendChild(td1);
+            }
+            var td1 = document.createElement("td");
+
+            td1.innerHTML = "<button onclick=delecttr(this)>删除 </button>";
+
+            tr1.appendChild(td1);
+            tab1.appendChild(tr1);
         }
 
-        function del() {
-            insertBtn.removeChild(tr);
+        function delecttr(obj) {
+            var tr1 = obj.parentNode.parentNode;
+            tr1.parentNode.removeChild(tr1);
         }
     </script>
 </body>
