--- a/css/上下左右.html
+++ b/css/上下左右.html
@@ -45,32 +45,32 @@
         }
 
         .top {
-            top: 0;
+            top: -100px;
             background: #999;
             animation: movetop 1s linear 0s normal forwards;
         }
 
         .bottom {
-            bottom: 0;
+            bottom: -100px;
             background: pink;
             animation: movebottom 1s linear 1s normal forwards;
         }
 
         .left {
-            top: 50%;
+            left: -100px;
             background: #ccc;
             animation: moveleft 1s linear 2s normal forwards;
         }
 
         .right {
-            right: 0;
+            right: -100px;
             background: #f3f3f3;
             animation: moveright 1s linear 3s normal forwards;
         }
 
         @keyframes movetop {
             0% {
-                top: 0;
+                top: -100px;
             }
 
 
@@ -81,7 +81,7 @@
 
         @keyframes movebottom {
             0% {
-                bottom: 0;
+                bottom: -100px;
             }
 
 
@@ -92,7 +92,7 @@
 
         @keyframes moveleft {
             0% {
-                left: 0;
+                left: -100px;
             }
 
 
@@ -103,7 +103,7 @@
 
         @keyframes moveright {
             0% {
-                right: 0;
+                right: -100px;
             }
 
 
