--- a/javascript/回到顶部/html/html.html
+++ b/javascript/回到顶部/html/html.html
@@ -14,7 +14,7 @@
     <div class="box">2</div>
     <div class="box">3</div>
     <div class="box">4</div>
-    
+
     <button id="btn">返回顶部</button>
     <script>
         var navItem = document.getElementById("btn");
@@ -34,7 +34,17 @@
 
             navItem.onclick = function () {
 
-                document.body.ScrollTop = document.documentElement.scrollTop = 0;
+                timer = setInterval(function () {
+
+                    var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+                    var ispeed = Math.floor(-scrollTop / 6);
+
+                    if (scrollTop == 0) {
+                        clearInterval(timer);
+                    }
+
+                    document.documentElement.scrollTop = document.body.scrollTop = scrollTop + ispeed;
+                }, 100)
             }
         }
     </script>
