fix:删除index.lock后再次添加

--- a/javascript/ajax/html/demo.html
+++ b/javascript/ajax/html/demo.html
@@ -54,7 +54,7 @@
                         success:     function( result ){
                             console.log('成功');
                             console.log( result );
-
+                            //cdndc
                             var contentwrap = '';
                             
                             for( var i = 0; i < result.length; i++ )
