--- a/javascript/双击放大/双击放大.html
+++ b/javascript/双击放大/双击放大.html
@@ -19,13 +19,10 @@
                 height: 100%;
             }
 
-            body {
-                padding: 200px 500px;
-            }
             
             #item {
                 display: inline-block;
-                padding: 100px 50px;
+                padding: 10px;
                 background: #999;
                 text-align: center;
                 transform: all .6s;
@@ -46,7 +43,7 @@
 
     <body>
         <div id="item">
-            <p class="tit">双击可以放大，再次双击恢复原样</p>
+            <p class="tit">双击</p>
         </div>
 
         <script>
