--- a/css/等分.html
+++ b/css/等分.html
@@ -22,6 +22,7 @@
             padding: 10px;
             margin-left: -10px;
             display: flex;
+            flex-wrap: wrap;
             height: 100%;
             border: 1px solid red;
             
@@ -47,6 +48,24 @@
             <div class="item-main"></div>
         </div>
 
+        <div class="list-item">
+            <div class="item-main"></div>
+        </div>
+
+        <div class="list-item">
+            <div class="item-main"></div>
+        </div>
+        <div class="list-item">
+            <div class="item-main"></div>
+        </div>
+
+        <div class="list-item">
+            <div class="item-main"></div>
+        </div>
+
+        <div class="list-item">
+            <div class="item-main"></div>
+        </div>
         <div class="list-item">
             <div class="item-main"></div>
         </div>
