fix:修改点击在他父元素时点击问题

--- a/javascript/冒泡方式-点击事件/html/demo.html
+++ b/javascript/冒泡方式-点击事件/html/demo.html
@@ -230,7 +230,7 @@
                     if ($(".content-wrap").eq(i).hasClass("fold")) {
                         $(".content-wrap").eq(i).addClass("fold").siblings().removeClass("fold");
                     } else {
-                        $(".content-wrap").eq(i).removeClass("fold");
+                        $(".content-wrap").eq(i).removeClass("fold").siblings().removeClass("fold");;
                     }
                     console.log("jjj");
                     event.stopPropagation();
